5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1876_1645.log
== TEST (2019-07-03 18:38:20) 
-- CODE:
from numpy import*
from math import*
valores=eval(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:38:57) 
-- CODE:
from numpy import*
from math.light import*
valores=eval(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:14) 
-- CODE:
from numpy import*
from light.math import*
valores=eval(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:34) 
-- CODE:
from numpy import*
from math import*
valores=array(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:03) 
-- CODE:
from numpy.light import*
from math import*
valores=array(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.light import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:23) 
-- CODE:
from light.numpy import*
from math import*
valores=array(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from light.numpy import*
ModuleNotFoundError: No module named 'light'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:34) 
-- CODE:

from math import*
valores=array(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=array(int(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:37) 
-- CODE:

from math import*
valores=array(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=array(int(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:49) 
-- CODE:

from math import*
valores=eval(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=eval(int(input()))
ValueError: invalid literal for int() with base 10: '[2000,1500,2100,1500,3000,3200,1205,1800]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:21) 
-- CODE:
from math import*

valores=eval(int(input()))
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=eval(int(input()))
ValueError: invalid literal for int() with base 10: '[2000,1500,2100,1500,3000,3200,1205,1800]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:51:25) 
-- CODE:
from math import*

valores=eval(int(input("valores: ")))
zeros=zeros(valores, dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=eval(int(input()))
ValueError: invalid literal for int() with base 10: '[2000,1500,2100,1500,3000,3200,1205,1800]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:51:30) 
-- CODE:
from math import*

valores=eval(int(input("valores: ")))
zeros=zeros(valores, dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=eval(int(input()))
ValueError: invalid literal for int() with base 10: '[2000,1500,2100,1500,3000,3200,1205,1800]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:22) 
-- CODE:
from math import*

valores=eval(int(input("valores: ")))
zeros=zeros(valores, dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valores=eval(int(input()))
ValueError: invalid literal for int() with base 10: '[2000,1500,2100,1500,3000,3200,1205,1800]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:59) 
-- CODE:
from math import*

valores=eval(input("valores: "))
zeros=zeros(valores, dtype=int)

print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    zeros=zeros(valores, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:26) 
-- CODE:
from math import*

valores=eval(input("valores: "))
zero=zeros(valores, dtype=int)

print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    zero=zeros(valores, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:41) 
-- CODE:
from math import*

valores=eval(input("valores: "))


print(valores)
-- OUTPUT:
[2000, 1500, 2100, 1500, 3000, 3200, 1205, 1800]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:42) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))


print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:22) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
zero=zeros(valores, dtype=int)

print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:57:51) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
zero=zeros(valores, dtype=int)
cont=0
for i in valores:
	if (i>=2000):
		cont=cont+1

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:09) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))

cont=0
for i in valores:
	if (i>=2000):
		cont=cont+1

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:23) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in valores:
		zero=zero[i]+aux
	aux=aux+1	
print(total)
-- ERROR:
File "XXXX", line 13
    aux=aux+1	
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:38) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:54) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
for i in valores:
	if (i>=2000):
		cont=cont+1
	
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:34) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros=zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
	
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:28) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in valores:
		zero=zero[i]+aux
	aux=aux+1	
print(total)
-- ERROR:
File "XXXX", line 14
    aux=aux+1	
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:46) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in valores:
		zeros=zeros[i]+aux
	aux=aux+1	
print(total)
-- ERROR:
File "XXXX", line 14
    aux=aux+1	
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:53) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in valores:
		zeros=zeros[i]+aux

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:11) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in valores:
		zeros[i]=zeros[i]+aux

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:43) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in total:
		zeros[i]=zeros[i]+aux

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:06:23) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in total:
	zeros[i]=zeros[i]+aux

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:23) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
zeros(total, dtype=int)
for i in valores:
	if (i>=2000):
		cont=cont+1
for i in total:
	if(i>=2000):
		zeros[i]=zeros[i]+aux
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:11:18) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		aux=aux+1
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:11:38) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		aux=aux+1
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:12:42) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
total=size(valores)
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[i]=zeros[i]+aux
		
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:13:02) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0

for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[i]=zeros[i]+aux
		
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:13:23) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0

for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[i]=zeros[i]+aux
		
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:08) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0

for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[i]=zeros[i]+aux
	aux=aux+1	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:15:37) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
aux1=0
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[aux1]=zeros[i]+aux
		aux1=aux1+1
	aux=aux+1	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:15:54) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
aux1=0
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[aux1]=zeros[aux1]+aux
		aux1=aux1+1
	aux=aux+1	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:16:06) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
aux1=0
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[aux1]=zeros[aux1]+aux
		aux1=aux1+1
	aux=aux+1	
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:16:29) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
aux1=0
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[aux1]=zeros[aux1]+aux
		aux1=aux1+1
	aux=aux+1	
print(cont)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:16:37) 
-- CODE:
from numpy import*
from math import*

valores=eval(input("valores: "))
cont=0
aux=0
aux1=0
for i in valores:
	if (i>=2000):
		cont=cont+1
zeros=zeros(cont, dtype=int)
for i in valores:
	if(i>=2000):
		zeros[aux1]=zeros[aux1]+aux
		aux1=aux1+1
	aux=aux+1	
print(cont)
print(zeros)
-- EXECUTION TIME:
1.05659
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 5 6 7 9]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
